# cmake-toolset

./: .clang-format  .clinerules  .cmake-format.yaml  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  CompilerOption.cmake  Import.cmake  LICENSE  MigrateFromAtframeUtils.md  README.md  RecommendStdVersion.cmake  TargetOption.cmake  Toolchain.cmake
.agents/skills/: README.md
.github/: copilot-instructions.md
.github/instructions/: ci-entrypoints.instructions.md  ci-matrix.instructions.md  cmake-ports.instructions.md  cmake-test-integration.instructions.md  port-patches.instructions.md
.github/prompts/: fix-ci-failure.prompt.md  upgrade-port.prompt.md
.github/workflows/: build.yaml  release.yaml
ci/: cmake_android_wrapper.sh  cmake_ios_wrapper.sh  do_ci.ps1  do_ci.sh  format.sh  requirements.txt
modules/: AtframeworkToolsetAutoInheritOptions.cmake  AtframeworkToolsetCommonDefinitions.cmake  EchoWithColor.cmake  FindConfigurePackage.cmake  FindJemalloc.cmake  FindLibcopp.cmake  FindLibevent.cmake  FindLibnghttp2.cmake  FindLibnghttp3.cmake  FindLibngtcp2.cmake  FindLibngtcp2_crypto_openssl.cmake  FindLibngtcp2_crypto_ossl.cmake  FindLibngtcp2_crypto_quictls.cmake  FindLibsodium.cmake  FindLibunwind.cmake  FindLibuuid.cmake  FindLibuv.cmake  FindMbedTLS.cmake  FindPbc.cmake  FindRapidjson.cmake  Findsodium.cmake  IncludeDirectoryRecurse.cmake  MaybePopulateSubmodule.cmake  ProjectBuildTools.cmake  ProjectSanitizerTools.cmake  RunCCode.cmake  RunCXXCode.cmake  print_color.py  reset-host-build-envs.ps1  reset-host-build-envs.sh  restore-host-build-envs.ps1  restore-host-build-envs.sh
modules/crosscompiling/: run-build-host.ps1.in  run-build-host.sh.in
ports/: Configure.cmake
ports/abseil-cpp/: abseil-cpp-20200225.3.patch  abseil-cpp-20220623.1.patch  abseil-cpp-20220623.2.patch  abseil-cpp.cmake
ports/algorithm/: tbb-v2021.10.0.patch  tbb-v2021.11.0.patch  tbb-v2021.12.0.patch  tbb-v2021.13.0.patch  tbb-v2021.5.0.patch  tbb-v2021.6.0.patch  tbb-v2021.8.0.patch  tbb-v2022.0.0.patch  tbb-v2022.1.0.patch  tbb-v2022.3.0.patch  tbb.cmake  xxhash-v0.8.0.patch  xxhash-v0.8.1.patch  xxhash.cmake
ports/cares/: c-ares.cmake  cares-1.33.patch  cares-1.34.patch
ports/compression/: import.cmake  lz4.cmake  snappy-1.1.10.patch  snappy-1.1.9.patch  snappy-1.2.patch  snappy.cmake  zlib-v1.2.11.patch  zlib-v1.2.12.patch  zlib-v1.2.13.patch  zlib-v1.3.1.patch  zlib-v1.3.2.patch  zlib-v1.3.patch  zlib.cmake  zstd.cmake
ports/flatbuffers/: flatbuffers-v24.12.patch  flatbuffers-v24.3.patch  flatbuffers-v25.2.patch  flatbuffers.cmake
ports/fmtlib/: fmtlib-8.1.1.patch  fmtlib.cmake
ports/grpc/: abseil-cpp-20211102.0.patch  abseil-cpp.cmake  c-ares.cmake  grpc-v1.33.2.patch  grpc-v1.39.1.patch  grpc-v1.40.0.patch  grpc-v1.41.0.patch  grpc-v1.42.0.patch  grpc-v1.43.0.patch  grpc-v1.43.2.patch  grpc-v1.44.0.patch  grpc-v1.45.0.patch  grpc-v1.45.2.patch  grpc-v1.48.0.patch  grpc-v1.48.1.patch  grpc-v1.49.1.patch  grpc-v1.50.0.patch  grpc-v1.50.patch  grpc-v1.51.patch  grpc-v1.54.0.patch  grpc-v1.54.2.patch  grpc-v1.54.patch  grpc-v1.55.0.patch  grpc-v1.57.0.patch  grpc-v1.58.1.patch  grpc-v1.60.patch  grpc-v1.62.patch  grpc-v1.64.patch  grpc-v1.65.patch  grpc-v1.67.patch  grpc-v1.68.patch  grpc-v1.70.patch  grpc-v1.73.patch  grpc-v1.74.patch  grpc-v1.76.patch  grpc-v1.80.patch  grpc.cmake  import.cmake  re2.cmake  upb-455cfdb8ae60a1763e6d924e36851c6897a781bb.patch  (+4 more)
ports/gsl/: README.md  gnu-gsl.cmake  gsl-lite.cmake  ms-gsl.cmake
ports/hiredis/: hiredis.cmake
ports/jemalloc/: README.md  jemalloc.cmake
ports/json/: nlohmann_json.cmake  rapidjson-24b5e7a8b27f42fa16b96fc70aade9106cf7102f.patch  rapidjson-476ffa2fd272243275a74c36952f210267dc3088.patch  rapidjson-5ec44fb9206695e5293f610b0a46d21851d0c966.patch  rapidjson-f9d53419e912910fd8fa57d5705fa41425428c35.patch  rapidjson.cmake
ports/libcopp/: libcopp.cmake
ports/libcurl/: libcurl-7.87.patch  libcurl-8.0.patch  libcurl-8.1.patch  libcurl-8.10.patch  libcurl-8.11.patch  libcurl-8.12.patch  libcurl-8.14.patch  libcurl-8.17.patch  libcurl-8.19.patch  libcurl-8.2.patch  libcurl-8.5.patch  libcurl-8.6.patch  libcurl-8.7.patch  libcurl-8.9.patch  libcurl.cmake
ports/libevent/: BUILD  libevent-2.1.patch  libevent.cmake
ports/libunwind/: BUILD  libunwind.cmake
ports/libuv/: libuv-69b811f340f43ba5343eddbe167dd4882e136fe6.patch  libuv-v1.41.0.patch  libuv-v1.43.0.patch  libuv-v1.44.1.patch  libuv-v1.44.2.patch  libuv-v1.46.patch  libuv-v1.48.patch  libuv-v1.49.patch  libuv-v1.51.patch  libuv-v1.52.patch  libuv.cmake
ports/libwebsockets/: libwebsockets.cmake
ports/lua/: lua-v5.4.3.cross.patch  lua-v5.4.4.cross.patch  lua-v5.4.6.cross.patch  lua-v5.4.7.cross.patch  lua-v5.5.cross.patch  lua.cmake
ports/malloc/: jemalloc.cmake  mimalloc-v2.0.patch  mimalloc-v2.1.7.patch  mimalloc-v2.1.patch  mimalloc-v3.0.patch  mimalloc-v3.1.patch  mimalloc.cmake  rpmalloc.cmake
ports/nghttp2/: nghttp2-v1.63.patch  nghttp2-v1.64.patch  nghttp2-v1.66.patch  nghttp2-v1.68.patch  nghttp2.cmake
ports/ngtcp2/: nghttp3.cmake  ngtcp2-v0.17.0.patch  ngtcp2-v1.10.patch  ngtcp2-v1.13.patch  ngtcp2-v1.18.patch  ngtcp2-v1.22.patch  ngtcp2-v1.4.patch  ngtcp2-v1.8.patch  ngtcp2-v1.9.patch  ngtcp2.cmake
ports/protobuf/: protobuf-declare.cmake  protobuf-pull.cmake  protobuf-v23.patch  protobuf-v24.patch  protobuf-v25.patch  protobuf-v26.patch  protobuf-v27.patch  protobuf-v28.patch  protobuf-v29.patch  protobuf-v3.13.0.patch  protobuf-v3.17.0.patch  protobuf-v3.19.0.patch  protobuf-v3.19.1.patch  protobuf-v3.19.4.patch  protobuf-v3.20.0.patch  protobuf-v3.20.1.patch  protobuf-v3.21.1.patch  protobuf-v3.21.12.patch  protobuf-v3.21.4.patch  protobuf-v3.21.7.patch  protobuf-v3.22.patch  protobuf-v30.patch  protobuf-v31.patch  protobuf-v33.patch  protobuf.cmake  run-build-release.bat.in  run-build-release.ps1.in  run-build-release.sh.in  (+5 more)
test/: CMakeLists.txt  benchmark.cpp  gtest.cpp  main.cpp  test_pb.proto  test_upb-and-lua-binding.lua  upb-and-lua-binding.cpp
test/standalone-upb/: CMakeLists.txt
test/upb/: CMakeLists.txt
(+116 files in other folders)
